--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>首页</title>
-	<link rel="stylesheet" href="css/index.css">
+	<title>第五大道首页</title>
+	<link rel="stylesheet" href="css/base.css">
+	<link rel="stylesheet" href="css/home.css">
 </head>
 <body>
-	<div id="header"></div>
+	<h1>首页11</h1>
+	<div class="box">div1</div>
+	<div class="box">div2</div>
+
+	</div>
+
 </body>
 </html>
