--- a/src/html/reg.html
+++ b/src/html/reg.html
@@ -7,10 +7,6 @@
 	<link rel="stylesheet" href="../css/reg.css">
 	<!-- require模块化 -->
 	<script src="../js/require.js" data-main="../js/reg"></script>
-	
- 	<script>
- 
-    </script>
 </head>
 <body>
 <!-- 整页 -->
@@ -38,14 +34,14 @@
 				</p>
 
 		        <p class="input"><label for="username">您的邮箱：</label>
-		        <input type="text" name="username" id="username">
+		        <input type="text" name="username" id="username" placeholder="...@.com">
 		        <!-- <button class="y_mail">验证邮箱</button> -->
 		        </p>
 		        <p class="input"><label for="passowrd">密码：</label>
-		        <input type="password" name="passowrd" id="passowrd"></p>
+		        <input type="password" name="passowrd" id="passowrd" placeholder="6-12位密码"></p>
 
 		        <p class="input"><label for="passowrd02">确认密码：</label>
-		        <input type="password" name="passowrd02" id="passowrd02"></p>
+		        <input type="password" name="passowrd02" id="passowrd02" placeholder="6-12位密码"></p>
 
 		        <p>
 		        	<input type="checkbox" checked="checked">我已阅读并同意
