--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,6 @@
 	<link rel="stylesheet" href="css/home.css">
 	<!-- 轮播图插件 -->
 	<link rel="stylesheet" href="lib/jquery.Carousel/jquery.Carousel.css">
-	<!-- <script src="lib/jquery.lxCarousel/jquery.lxCarousel.js"></script> -->
 	<!-- require模块化 -->
 	<script src="js/require.js" data-main="js/home"></script>
 </head>
@@ -22,8 +21,8 @@
 			<div class="container">
 			<span class="gui">贵宾专线：400-400-5678</span>
 				<ul class="wu">
-					<li><a href="#" class="zhuce"><span >注册</span></a></li>
-					<li><a href="#" class="denglu"><span>登录</span></a></li>
+					<li><a href="html/reg.html" class="zhuce"><span >注册</span></a></li>
+					<li><a href="html/login.html" class="denglu"><span>登录</span></a></li>
 					<li><a href="#" class="gouwu"><i class="iconfont icon-gouwu"></i><span>购物袋</span></a></li>
 					<li><a href="#" class="my05"><span>我的第五大道</span></a></li>
 					<li><a href="#" class="more"><span>更多</span></a></li>
