--- a/src/html/goods.html
+++ b/src/html/goods.html
@@ -51,7 +51,6 @@
 			</div>
 		</div>
 	</div>
-
 	<!-- 导航 -->
 	<div class="nav">
 		<div class="container">
@@ -383,22 +382,210 @@
 		<div class="container">
 			<!-- 左图 -->
 			<div class="d_l">
+				<!-- 放大镜 -->
 				<div class="d_l_zhu">
 					<img src="../img/goods_d.png" data-big="../img/goods_dd.png">
 				</div>
-
-				<div class="d_l_ci"></div>
-			</div>
-			<!-- 左图 -->
-			<div class="d_r">
 				
+				<!-- 下方小图 轮播-->
+				<div class="d_l_ci">
+				</div>
+
+			</div>
+			<!-- 右图 -->
+			<div class="d_r">
+				<div class="d_r_t">
+					<p>Hermes</p>
+					<p>爱马仕</p>
+					<p>Birkin铂金包30奶昔白金扣epsom牛皮手提包</p>
+					<p>货号：5Lux070498g_p137564</p>
+				</div>
+				<div class="d_r_m">
+					<p class="jia">
+						<span><a href="#">第五大道价</a></span>
+						<span><a href="#">￥ 158000.00</a></span>
+						<span><a href="#"><i class="iconfont icon-gouwu"></i> 会员价</a></span>
+					</p>
+					<div class="zhuangui">
+						<p>专柜价：￥200000.00</p>
+						<p>优惠信息：</p>
+						<p>翼支付满1000减300</p>
+						<p>翼支付满返优惠券</p>
+					</div>
+					<div class="se">
+						<span>色系：</span>
+						<span>奶昔白</span>
+					</div>
+					<div class="shu">
+						<span>数量：</span>
+						<button>-</button>
+						<input type="text" value="1">
+						<button>+</button>
+					</div>
+					<div class="wen">
+						<p>温馨提示：本商品不支持7天无理由退换货 不支持货到付款<span><a href="#">更多提示∨</a></span></p>
+						<p>发货地：北京直发</p>
+						<p>配货时间：5-15天</p>
+					</div>
+					<div class="liji">
+						<span><a href="#">立即购买</a></span>
+						<span><a href="#"><i class="iconfont icon-gouwu"></i>加入购物车</a></span>
+						<span><a href="#"><i class="iconfont icon-jushoucang"></i>加入收藏</a></span>
+					</div>
+					<div class="qiu">
+						<div class="qiu_t">
+							<span><i class="iconfont icon-iconfont5"></i></span>
+							<span><i class="iconfont icon-haiwai"></i></span>
+							<span><i class="iconfont icon-trust"></i></span>
+							<span><i class="iconfont icon-auto"></i></span>
+							<span><i class="iconfont icon-process"></i></span>
+						</div>
+						<div class="qiu_b">
+							<span><a href="#">正牌保证</a></span>
+							<span><a href="#">全球服务</a></span>
+							<span><a href="#">贴心客服</a></span>
+							<span><a href="#">全球速递</a></span>
+							<span><a href="#">商务部诚信企业</a></span>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
-	
 
+	<div class="d_g">
+	<div class="container">
+		<!-- 详情页 -->
+		<div class="dateils">
+			<div class="dd01">
+				<span><a href="#">商品详情</a></span>
+				<span><a href="#">尺码参照</a></span>
+				<span><a href="#">关于评价</a></span>
+			</div>
+			<!-- 圆钮 -->
+			<div class="dd02">
+			</div>
+			<div class="ddd00"></div>
+			<div class="ddd01"></div>
+			<div class="ddd02"></div>
+			<div class="ddd03"></div>
+			<div class="ddd04"></div>
+			<div class="ddd05"></div>
+			<div class="ddd06"></div>
+			<div class="ddd07"></div>
+			<div class="ddd08"></div>
+			<div class="ddd09"></div>
+		</div>
+		<!-- 右商品图 -->
+		<div class="goods">		
+			<div class="gg00"><a href="#"></a></div>
+			<div class="gg01"><a href="#"></a></div>
+			<!-- 商品模板 -->
 
+			<div class="goods00">
+				<div class="g_t">
+					商品推荐
+				</div>
+				<!-- 1 -->
+				<div class="g_m"><a href="#"></a></div>
+				<div class="g_b">
+					<p><a href="#">Picotin Lock 咖啡色<br>RMB：26000.00</a>
+					</p>
+				</div>
+				<!-- 1 -->
+				<div class="g_m"><a href="#"></a></div>
+				<div class="g_b">
+					<p><a href="#">Picotin Lock 咖啡色<br>RMB：26000.00</a>
+					</p>
+				</div>
+				<!-- 1 -->
+				<div class="g_m"><a href="#"></a></div>
+				<div class="g_b">
+					<p><a href="#">Picotin Lock 咖啡色<br>RMB：26000.00</a>
+					</p>
+				</div>
+			</div>
+			<div class="goods00">
+				<div class="g_t">
+					商品推荐
+				</div>
+				<!-- 1 -->
+				<div class="g_m"><a href="#"></a></div>
+				<div class="g_b">
+					<p><a href="#">Picotin Lock 咖啡色<br>RMB：26000.00</a>
+					</p>
+				</div>
+				<!-- 1 -->
+				<div class="g_m"><a href="#"></a></div>
+				<div class="g_b">
+					<p><a href="#">Picotin Lock 咖啡色<br>RMB：26000.00</a>
+					</p>
+				</div>
+				<!-- 1 -->
+				<div class="g_m"><a href="#"></a></div>
+				<div class="g_b">
+					<p><a href="#">Picotin Lock 咖啡色<br>RMB：26000.00</a>
+					</p>
+				</div>
+				<!-- 1 -->
+				<div class="g_m"><a href="#"></a></div>
+				<div class="g_b">
+					<p><a href="#">Picotin Lock 咖啡色<br>RMB：26000.00</a>
+					</p>
+				</div>
+				<!-- 1 -->
+				<div class="g_m"><a href="#"></a></div>
+				<div class="g_b">
+					<p><a href="#">Picotin Lock 咖啡色<br>RMB：26000.00</a>
+					</p>
+				</div>
+			</div>
+			<div class="goods00">
+				<div class="g_t">
+					商品推荐
+				</div>
+				<!-- 1 -->
+				<div class="g_m"><a href="#"></a></div>
+				<div class="g_b">
+					<p><a href="#">Picotin Lock 咖啡色<br>RMB：26000.00</a>
+					</p>
+				</div>
+				<!-- 1 -->
+				<div class="g_m"><a href="#"></a></div>
+				<div class="g_b">
+					<p><a href="#">Picotin Lock 咖啡色<br>RMB：26000.00</a>
+					</p>
+				</div>
+				<!-- 1 -->
+				<div class="g_m"><a href="#"></a></div>
+				<div class="g_b">
+					<p><a href="#">Picotin Lock 咖啡色<br>RMB：26000.00</a>
+					</p>
+				</div>
+				<!-- 1 -->
+				<div class="g_m"><a href="#"></a></div>
+				<div class="g_b">
+					<p><a href="#">Picotin Lock 咖啡色<br>RMB：26000.00</a>
+					</p>
+				</div>
+				<!-- 1 -->
+				<div class="g_m"><a href="#"></a></div>
+				<div class="g_b">
+					<p><a href="#">Picotin Lock 咖啡色<br>RMB：26000.00</a>
+					</p>
+				</div>
+				<!-- 1 -->
+				<div class="g_m"><a href="#"></a></div>
+				<div class="g_b">
+					<p><a href="#">Picotin Lock 咖啡色<br>RMB：26000.00</a>
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
 
+		
+	</div>
 
 	<!-- 最后 -->
 	<div class="footer">
